--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,14 @@ platform = espressif32
 board = pico32
 framework = arduino
 lib_deps = 
+	SPI
+	Wire
 	fastled/FastLED@^3.6.0
 	kosme/arduinoFFT@^2.0.2
+	evert-arias/EasyButton@^2.0.3
+	marcmerlin/FastLED NeoMatrix@^1.2
+	adafruit/Adafruit GFX Library@^1.11.9
+	adafruit/Adafruit BusIO@^1.16.0
+	adafruit/Adafruit Unified Sensor@^1.1.14
+	marcmerlin/Framebuffer GFX@^1.1
+monitor_speed = 115200
