--- a/platformio.ini
+++ b/platformio.ini
@@ -8,19 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pico32]
+[env:esp-wrover-kit]
 platform = espressif32
-board = pico32
+board = esp-wrover-kit
 framework = arduino
 lib_deps = 
 	SPI
 	Wire
 	fastled/FastLED@^3.6.0
 	kosme/arduinoFFT@^2.0.2
-	evert-arias/EasyButton@^2.0.3
-	marcmerlin/FastLED NeoMatrix@^1.2
 	adafruit/Adafruit GFX Library@^1.11.9
 	adafruit/Adafruit BusIO@^1.16.0
 	adafruit/Adafruit Unified Sensor@^1.1.14
-	marcmerlin/Framebuffer GFX@^1.1
 monitor_speed = 115200
+build_flags = -DBOARD_HAS_PSRAM -mfix-esp32-psram-cache-issue
+board_build.partitions = huge_app.csv
+board_build.f_flash= 40000000L
+
