--- a/platformio.ini
+++ b/platformio.ini
@@ -15,13 +15,10 @@ framework = arduino
 lib_deps = 
 	SPI
 	Wire
-	fastled/FastLED@^3.6.0
 	kosme/arduinoFFT@^2.0.2
 	adafruit/Adafruit GFX Library@^1.11.9
 	adafruit/Adafruit BusIO@^1.16.0
 	adafruit/Adafruit Unified Sensor@^1.1.14
+	makuna/NeoPixelBus@^2.8.0
 monitor_speed = 115200
-build_flags = -DBOARD_HAS_PSRAM -mfix-esp32-psram-cache-issue
-board_build.partitions = huge_app.csv
-board_build.f_flash= 40000000L
-
+board_build.partitions = double_default.csv
