--- a/platformio.ini
+++ b/platformio.ini
@@ -8,17 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp-wrover-kit]
-platform = espressif32
-board = esp-wrover-kit
+[env:teensy40]
+platform = teensy
+board = teensy40
 framework = arduino
 lib_deps = 
 	SPI
 	Wire
 	kosme/arduinoFFT@^2.0.2
-	adafruit/Adafruit GFX Library@^1.11.9
-	adafruit/Adafruit BusIO@^1.16.0
-	adafruit/Adafruit Unified Sensor@^1.1.14
-	makuna/NeoPixelBus@^2.8.0
+	fastled/FastLED@^3.7.0
 monitor_speed = 115200
-board_build.partitions = double_default.csv
