Improve audio reactivity and dynamics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "typeinfo": "cpp",
         "functional": "cpp",
         "tuple": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "*.tpp": "cpp",
+        "ratio": "cpp"
     }
 }
