--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "cmath": "cpp",
         "*.tpp": "cpp",
         "ratio": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "chrono": "cpp"
     },
     "stm32-for-vscode.openOCDPath": false,
     "stm32-for-vscode.makePath": false,
