kick detect iteration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,13 @@
         "*.tpp": "cpp",
         "ratio": "cpp",
         "random": "cpp",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp"
     },
     "stm32-for-vscode.openOCDPath": false,
     "stm32-for-vscode.makePath": false,
